--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,7 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "MaxFibra",
+  "name": "Max Fibra - Internet de Alta Velocidade",
+  "description": "Os melhores planos de internet fibra óptica. Conexão rápida e estável para sua casa ou empresa.",
   "icons": [
     {
       "src": "favicon.ico",
@@ -10,16 +11,36 @@
     {
       "src": "logo192.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "192x192",
+      "purpose": "any maskable"
     },
     {
       "src": "logo512.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x512",
+      "purpose": "any maskable"
     }
   ],
-  "start_url": ".",
+  "start_url": "/",
+  "scope": "/",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "orientation": "portrait-primary",
+  "theme_color": "#00d400",
+  "background_color": "#ffffff",
+  "shortcuts": [
+    {
+      "name": "Planos de Internet",
+      "short_name": "Planos",
+      "description": "Veja nossos planos de internet",
+      "url": "/#/planos",
+      "icons": [{ "src": "logo192.png", "sizes": "192x192", "type": "image/png" }]
+    },
+    {
+      "name": "Fale Conosco",
+      "short_name": "Contato",
+      "description": "Entre em contato conosco",
+      "url": "/#/contato",
+      "icons": [{ "src": "logo192.png", "sizes": "192x192", "type": "image/png" }]
+    }
+  ]
 }
