--- a/package.json
+++ b/package.json
@@ -4,15 +4,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@lottiefiles/react-lottie-player": "^3.6.0",
+    "@mui/material": "^6.4.8",
+    "@mui/x-date-pickers": "^7.28.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.3",
+    "dayjs": "^1.11.13",
     "framer-motion": "^12.5.0",
     "lottie-react": "^2.4.1",
     "react": "^19.0.0",
+    "react-datepicker": "^8.2.1",
+    "react-day-picker": "^9.6.2",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-input-mask": "^2.0.4",
